<resources>
    <string name="app_name">WaterReminder</string>
    <string name="action_user_profile">User Profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="profile_settings_fragment_label">Profile Settings</string>
    <string name="home_fragment_label">Home</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hello_user">Hello, %1$s</string>
    <string name="todays_goal">%1$s glasses</string>
    <string name="goal_progress"> Daily Progress  </string>
    <string name="notification_title">"Time to drink water"</string>
    <string name="water_reminder_channel_id">water_channel</string>
    <string name="time_to_drink_water_message">Its been a long time since you drank your last cup of water. Lets do it again?</string>
    <string name="drink_water_channel_id">drink_water_channel</string>
    <string name="drink_water_channel_name">Drink Water Reminder</string>
    <string name="drink_water_channel_description">Drink some water</string>
    <string name="track_water">Track your drinking habits by opening the app and tapping on the tick mark once you drink a glass of water</string>
    <string name="goal_achieved_dialog_title">You have attained your daily goal</string>
    <string name="good_work">OK</string>
    <string name="glasses_left">%1$s glasses</string>
    <string name="name_icon">Name Icon</string>
    <string name="daily_water_consumption_goal">Daily water consumption goal:</string>
    <string name="daily_goal_hint">e.g. 3000ml</string>
    <string name="size_of_glass">Size of Glass:</string>
    <string name="size_of_glass_hint">e.g. 500ml</string>
    <string name="sleep_schedule">Sleep Schedule</string>
    <string name="sleep_time_default_text">10:00PM</string>
    <string name="to">to</string>
    <string name="wakeup_time_default_text">7:00AM</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight:</string>
    <string name="weight_hint">e.g. 50kgs</string>
    <string name="height">Height:</string>
    <string name="height_hint_text_view">e.g. 162 cm</string>
    <string name="kgs_ml">Kgs | Ml</string>
    <string name="lbs_oz">Lbs | oz</string>
    <string name="save_button_text">Save</string>
    <string name="num_of_glasses">6</string>
</resources>