<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.view.ProfileSettingsFragment">

            <!--Email Input View-->
            <LinearLayout
                android:id="@+id/name"
                style="@style/LinearLayoutEditText">

                <ImageView
                    android:id="@+id/userProfileImage"
                    style="@style/ImageStyle"
                    android:contentDescription="@string/name_icon"
                    app:srcCompat="@drawable/ic_user" />

                <EditText
                    android:id="@+id/editTextName"
                    style="@style/EditText"
                    android:hint="@string/enter_your_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    app:errorEnabled="true" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.3"
                android:background="@color/black" />

            <LinearLayout style="@style/LinearLayoutEditText">

                <TextView
                    android:id="@+id/consumptionGoal"
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/daily_water_consumption_goal" />

                <EditText
                    android:id="@+id/editTextGoal"
                    style="@style/EditText"
                    android:hint="@string/daily_goal_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    app:errorEnabled="true" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.3"
                android:background="@color/black" />

            <LinearLayout style="@style/LinearLayoutEditText">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin"
                    android:src="@drawable/ic_drink" />

                <TextView
                    android:id="@+id/glassMeasurements"
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/size_of_glass" />

                <EditText
                    android:id="@+id/editTextGlassSize"
                    style="@style/EditText"
                    android:hint="@string/size_of_glass_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    app:errorEnabled="true" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:alpha="0.3"
                android:background="@color/black" />

            <LinearLayout style="@style/LinearLayoutEditText">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sleep_schedule" />

                <Button
                    android:id="@+id/startTimeButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/time_picker_button_height"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin"
                    android:background="@drawable/name_view_rounded_corners"
                    android:text="@string/sleep_time_default_text"
                    android:textAllCaps="false"
                    android:textColor="@drawable/button_text" />

                <TextView
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginBottom="@dimen/margin"
                    android:text="@string/to" />

                <Button
                    android:id="@+id/endTimeButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/time_picker_button_height"
                    android:layout_gravity="center"
                    android:background="@drawable/name_view_rounded_corners"
                    android:text="@string/wakeup_time_default_text"
                    android:textAllCaps="false"
                    android:textColor="@drawable/button_text" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:alpha="0.3"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/gender"
                style="@style/LinearLayoutEditText">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/gender" />

                <LinearLayout
                    android:id="@+id/time_button_container"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_container_height"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin"
                    android:background="@drawable/name_view_rounded_corners"
                    android:orientation="horizontal"
                    android:padding="0.5dp">

                    <Button
                        android:id="@+id/maleButton"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:text="@string/male"
                        android:textAllCaps="false"
                        android:textColor="@drawable/button_text" />

                    <Button
                        android:id="@+id/femaleButton"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:text="@string/female"
                        android:textAllCaps="false"
                        android:textColor="@drawable/button_text" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:alpha="0.3"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/weight"
                style="@style/LinearLayoutEditText">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin"
                    android:text="@string/weight" />


                <EditText
                    android:id="@+id/editTextWeight"
                    style="@style/EditText"
                    android:hint="@string/weight_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    app:errorEnabled="true" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:alpha="0.3"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/height"
                style="@style/LinearLayoutEditText"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin"
                    android:text="@string/height" />


                <EditText
                    android:id="@+id/editTextHeight"
                    style="@style/EditText"
                    android:layout_height="wrap_content"
                    android:hint="@string/height_hint_text_view"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    app:errorEnabled="true" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:alpha="0.3"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/unitsOfMeasurement"
                style="@style/LinearLayoutEditText">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Units of Measurement:" />

                <LinearLayout
                    android:id="@+id/measurements_button_container"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_container_height"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin"
                    android:background="@drawable/name_view_rounded_corners"
                    android:orientation="horizontal"
                    android:padding="0.5dp">

                    <Button
                        android:id="@+id/kgsUnits"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:text="@string/kgs_ml"
                        android:textAllCaps="false"
                        android:textColor="@drawable/button_text" />

                    <Button
                        android:id="@+id/poundsUnits"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:text="@string/lbs_oz"
                        android:textAllCaps="false"
                        android:textColor="@drawable/button_text" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/saveButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/save_button_width"
                android:layout_height="@dimen/save_button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin"
                android:background="@drawable/name_view_rounded_corners"
                android:text="@string/save_button_text"
                android:textAllCaps="false"
                android:textColor="@drawable/button_text" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>