<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".ui.view.ProfileSettingsFragment">

        <ImageView
            android:id="@+id/userProfileImage"
            style="@style/CircleImageView"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:contentDescription="Name Icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            tools:text="Florence Njeri" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout style="@style/LinearLayoutEditText">

                    <TextView
                        android:id="@+id/consumptionGoal"
                        style="@style/TextStyleNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:text="Daily water consumption goal:"
                        android:textSize="@dimen/text_size_sixteen"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/goal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:text="3000ml" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.3"
                    android:background="@color/black" />

                <LinearLayout style="@style/LinearLayoutEditText">

                    <TextView
                        android:id="@+id/glassMeasurements"
                        style="@style/TextStyleNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:text="Size of Glass:"
                        android:textSize="@dimen/text_size_sixteen"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/glassSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:text="3000ml" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.3"
                    android:background="@color/black" />

                <LinearLayout style="@style/LinearLayoutEditText">

                    <TextView
                        android:id="@+id/userWaterIntake"
                        style="@style/TextStyleNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:text="Number of glasses :"
                        android:textSize="@dimen/text_size_sixteen"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/waterIntakeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:text="@string/num_of_glasses" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.3"
                    android:background="@color/black" />

                <LinearLayout style="@style/LinearLayoutEditText">

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/TextStyleNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Sleep Shedule"
                        android:textSize="@dimen/text_size_sixteen"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sleepingTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin"
                        tools:text="21:00 PM" />

                    <TextView
                        style="@style/TextStyleNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="to" />

                    <TextView
                        android:id="@+id/wakeUpTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:text="4:00 AM" />


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.3"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/gender"
                    style="@style/LinearLayoutEditText">

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/TextStyleNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Gender"
                        android:textSize="@dimen/text_size_sixteen"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/time_button_container"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/name_view_rounded_corners"
                        android:orientation="horizontal"
                        android:padding="0.5dp">

                        <Button
                            android:id="@+id/maleButton"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/button_selector"
                            android:text="@string/male"
                            android:textAllCaps="false"
                            android:textColor="@drawable/button_text" />

                        <Button
                            android:id="@+id/femaleButtonSettings"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/button_selector"
                            android:text="@string/female"
                            android:textAllCaps="false"
                            android:textColor="@drawable/button_text" />

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.3"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/weightLayout"
                    style="@style/LinearLayoutEditText">

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/TextStyleNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="16dp"
                        android:text="Weight:"
                        android:textSize="@dimen/text_size_sixteen"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:text="53 kgs" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.3"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/heightLayout"
                    style="@style/LinearLayoutEditText">

                    <TextView
                        android:id="@+id/textView6"
                        style="@style/TextStyleNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:text="Height:"
                        android:textSize="@dimen/text_size_sixteen"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:text="167 cm" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.3"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/unitsOfMeasurement"
                    style="@style/LinearLayoutEditText">

                    <TextView
                        android:id="@+id/textView7"
                        style="@style/TextStyleNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Units of Measurement:"
                        android:textSize="@dimen/text_size_sixteen"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/measurements_button_container"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/name_view_rounded_corners"
                        android:orientation="horizontal"
                        android:padding="0.5dp">

                        <Button
                            android:id="@+id/kgsUnits"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/button_selector"
                            android:text="Kgs | Ml"
                            android:textAllCaps="false"
                            android:textColor="@drawable/button_text" />

                        <Button
                            android:id="@+id/poundsUnitsSettings"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/button_selector"
                            android:text="Lbs | oz"
                            android:textAllCaps="false"
                            android:textColor="@drawable/button_text" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>